[package]
name = "rust-eth-cnx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "1.0.0", features = ["rustls"] }
## WS ethers = { version = "1.0.0", features = ["ws"] }
## IPC ethers = { version = "1.0.0", features = ["ipc"] }

# Most of ethers-rs features rely upon an async Rust runtime. 
# Since Rust doesn't provide an async runtime itself, you can include the excellent tokio library
tokio = { version = "1.23.0", features = ["macros"] }

hex = "0.4"
web3 = "0.17.0"
dotenv = "0.15.0"

# Flexible concrete Error Reporting type built on std::error::Error with customizable Reports
eyre = "0.6.8"
